cmake_minimum_required(VERSION 3.5)
project(log)

macro(source_group_by_dir source_files)
    set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
    foreach(sgbd_file ${${source_files}})
        string(REGEX REPLACE ${sgbd_cur_dir}//(.*/) //1 sgbd_fpath ${sgbd_file})
        string(REGEX REPLACE "/(.*/)/.*" //1 sgbd_group_name ${sgbd_fpath})
        string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
        string(REPLACE "/" "//" sgbd_group_name ${sgbd_group_name})
        if(sgbd_nogroup)
            set(sgbd_group_name "//")
        endif(sgbd_nogroup)
        source_group(${sgbd_group_name} FILES ${sgbd_file})
    endforeach(sgbd_file)
endmacro(source_group_by_dir)

add_definitions("-g")

FILE(GLOB_RECURSE all_files
        *.cpp
        )

source_group(all_files)
include_directories($ENV{HOME}/github/ultimate/include/log)
include_directories($ENV{HOME}/github/ultimate/include/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(ultimate_bus bus.cpp)
add_executable(ultimate_slave slave.cpp)
add_executable(ultimate_master master.cpp)
add_executable(ultimate_tools tools.cpp)
target_link_libraries(ultimate_bus log common)
target_link_libraries(ultimate_slave log common)
target_link_libraries(ultimate_master log common)
target_link_libraries(ultimate_tools log common)